--- a/public/dashboard/admin/index.html
+++ b/public/dashboard/admin/index.html
@@ -164,7 +164,8 @@
                     </span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                    <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon icmn-user"></i> Profile</a>
+                    <a class="dropdown-item" ng-click="changePasswordScreen()"><i class="dropdown-icon icmn-user"></i> Change Password</a>
+                    <a class="dropdown-item" ng-click="profileScreen()"><i class="dropdown-icon icmn-user"></i> Profile</a>
                     <div class="dropdown-divider"></div>
                     
                     <a class="dropdown-item" href="/logout"><i class="dropdown-icon icmn-exit"></i> Logout</a>
