--- a/public/dashboard/admin/index.html
+++ b/public/dashboard/admin/index.html
@@ -166,7 +166,7 @@
                     </span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                    <a class="dropdown-item" ng-click="changePasswordScreen()"><i class="dropdown-icon icmn-user"></i> Change Password</a>
+                    <a class="dropdown-item" style="cursor:pointer" ng-click="changePasswordScreen()"><i class="dropdown-icon icmn-user"></i> Change Password</a>
                     <div class="dropdown-divider"></div>
                     
                     <a class="dropdown-item" href="/logout"><i class="dropdown-icon icmn-exit"></i> Logout</a>
