--- a/public/dashboard/user/index.html
+++ b/public/dashboard/user/index.html
@@ -100,7 +100,7 @@
 
     <!-- Angular Version Scripts -->
     <script src="../assets/vendors/angular/angular.min.js"></script>
-
+    <script src="../assets/vendors/angular/angular-idle.min.js"></script>
     <script src="../assets/vendors/angular-route/angular-route.min.js"></script>
     <script src="../assets/common/js/version_angular/user.js"></script>
 
